--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span class="ml-3 text-xl">Tailblocks</span>
+            <span class="ml-3 text-xl">BookLife</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-gray-900">First Link</a>
-            <a class="mr-5 hover:text-gray-900">Second Link</a>
-            <a class="mr-5 hover:text-gray-900">Third Link</a>
-            <a class="mr-5 hover:text-gray-900">Fourth Link</a>
+            <a class="mr-5 hover:text-gray-900">Home</a>
+            <a class="mr-5 hover:text-gray-900">About</a>
+            <a class="mr-5 hover:text-gray-900">Book</a>
+            <a class="mr-5 hover:text-gray-900">Feedback</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Button
+          <button class="inline-flex items-center bg-gray-100 border-1 py-3 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">GetStarted
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -35,13 +35,12 @@
             <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
           </div>
           <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Before they sold out
-              <br class="hidden lg:inline-block">readymade gluten
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Before Someone Tells the Suspense
+              <br class="hidden lg:inline-block">BookLife Stories
             </h1>
-            <p class="mb-8 leading-relaxed">Copper mug try-hard pitchfork pour-over freegan heirloom neutra air plant cold-pressed tacos poke beard tote bag. Heirloom echo park mlkshk tote bag selvage hot chicken authentic tumeric truffaut hexagon try-hard chambray.</p>
+            <p class="mb-8 leading-relaxed">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium natus debitis reiciendis quae, atque modi, corrupti quisquam possimus totam rerum, dicta eius repudiandae odio accusamus ratione amet labore culpa suscipit?</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
-              <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
+              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Get Reading</button>
             </div>
           </div>
         </div>
@@ -53,23 +52,23 @@
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
           <div class="flex flex-wrap -mx-4 mt-auto mb-auto lg:w-1/2 sm:w-2/3 content-start sm:pr-10">
             <div class="w-full sm:p-4 px-4 mb-6">
-              <h1 class="title-font font-medium text-xl mb-2 text-gray-900">Moon hashtag pop-up try-hard offal truffaut</h1>
-              <div class="leading-relaxed">Pour-over craft beer pug drinking vinegar live-edge gastropub, keytar neutra sustainable fingerstache kickstarter.</div>
+              <h1 class="title-font font-medium text-xl mb-2 text-gray-900">Popularitiy of our books</h1>
+              <div class="leading-relaxed">Our books have been ever popular since our launch.</div>
             </div>
             <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-              <h2 class="title-font font-medium text-3xl text-gray-900">2.7K</h2>
+              <h2 class="title-font font-medium text-3xl text-gray-900">1.4K</h2>
               <p class="leading-relaxed">Users</p>
             </div>
             <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-              <h2 class="title-font font-medium text-3xl text-gray-900">1.8K</h2>
+              <h2 class="title-font font-medium text-3xl text-gray-900">0.6k</h2>
               <p class="leading-relaxed">Subscribes</p>
             </div>
             <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-              <h2 class="title-font font-medium text-3xl text-gray-900">35</h2>
+              <h2 class="title-font font-medium text-3xl text-gray-900">3500</h2>
               <p class="leading-relaxed">Downloads</p>
             </div>
             <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-              <h2 class="title-font font-medium text-3xl text-gray-900">4</h2>
+              <h2 class="title-font font-medium text-3xl text-gray-900">6</h2>
               <p class="leading-relaxed">Products</p>
             </div>
           </div>
@@ -82,16 +81,16 @@
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-col text-center w-full mb-20">
             <h1 class="text-2xl font-medium title-font mb-4 text-gray-900">OUR TEAM</h1><hr>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Whatever cardigan tote bag tumblr hexagon brooklyn asymmetrical gentrify, subway tile poke farm-to-table. Franzen you probably haven't heard of them.</p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">This is all possible because of our ammazing team.It really makes me feel proud to work with them</p>
           </div>
           <div class="flex flex-wrap -m-4">
             <div class="p-4 lg:w-1/4 md:w-1/2">
               <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://dummyimage.com/200x200">
                 <div class="w-full">
-                  <h2 class="title-font font-medium text-lg text-gray-900">Alper Kamu</h2>
-                  <h3 class="text-gray-500 mb-3">UI Developer</h3>
-                  <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                  <h2 class="title-font font-medium text-lg text-gray-900">Ishan Mali</h2>
+                  <h3 class="text-gray-500 mb-3">Story&Poem Writter</h3>
+                  <p class="mb-4">Main face of the Operation, United us to become what we are today.</p>
                   <span class="inline-flex">
                     <a class="text-gray-500">
                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -116,9 +115,9 @@
               <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://dummyimage.com/201x201">
                 <div class="w-full">
-                  <h2 class="title-font font-medium text-lg text-gray-900">Holden Caulfield</h2>
-                  <h3 class="text-gray-500 mb-3">UI Developer</h3>
-                  <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                  <h2 class="title-font font-medium text-lg text-gray-900">Omkar Kumbhar</h2>
+                  <h3 class="text-gray-500 mb-3">Web Developer</h3>
+                  <p class="mb-4">Me Brought the website to life for what it is today.</p>
                   <span class="inline-flex">
                     <a class="text-gray-500">
                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -143,9 +142,9 @@
               <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://dummyimage.com/202x202">
                 <div class="w-full">
-                  <h2 class="title-font font-medium text-lg text-gray-900">Atticus Finch</h2>
-                  <h3 class="text-gray-500 mb-3">UI Developer</h3>
-                  <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                  <h2 class="title-font font-medium text-lg text-gray-900">Ananya</h2>
+                  <h3 class="text-gray-500 mb-3">Character Developer</h3>
+                  <p class="mb-4">Brought our Stories to life with her imagination and characters.</p>
                   <span class="inline-flex">
                     <a class="text-gray-500">
                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -170,9 +169,9 @@
               <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://dummyimage.com/203x203">
                 <div class="w-full">
-                  <h2 class="title-font font-medium text-lg text-gray-900">Henry Letham</h2>
-                  <h3 class="text-gray-500 mb-3">UI Developer</h3>
-                  <p class="mb-4">DIY tote bag drinking vinegar cronut adaptogen squid fanny pack vaporware.</p>
+                  <h2 class="title-font font-medium text-lg text-gray-900">????? ?????</h2>
+                  <h3 class="text-gray-500 mb-3">???????</h3>
+                  <p class="mb-4">??????????????????????????????????????????????.</p>
                   <span class="inline-flex">
                     <a class="text-gray-500">
                       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
@@ -205,12 +204,12 @@
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4" viewBox="0 0 975.036 975.036">
                   <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
                 </svg>
-                <p class="leading-relaxed mb-6">Synth chartreuse iPhone lomo cray raw denim brunch everyday carry neutra before they sold out fixie 90's microdosing. Tacos pinterest fanny pack venmo, post-ironic heirloom try-hard pabst authentic iceland.</p>
+                <p class="leading-relaxed mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nihil enim autem incidunt dolore numquam quasi maxime quos praesentium temporibus deleniti ratione libero in ex, perspiciatis illum, nam sunt sint!.</p>
                 <a class="inline-flex items-center">
                   <img alt="testimonial" src="https://dummyimage.com/106x106" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                   <span class="flex-grow flex flex-col pl-4">
-                    <span class="title-font font-medium text-gray-900">Holden Caulfield</span>
-                    <span class="text-gray-500 text-sm">UI DEVELOPER</span>
+                    <span class="title-font font-medium text-gray-900">Vidhya Kumbhar</span>
+                    <span class="text-gray-500 text-sm">Random User</span>
                   </span>
                 </a>
               </div>
@@ -224,8 +223,8 @@
                 <a class="inline-flex items-center">
                   <img alt="testimonial" src="https://dummyimage.com/107x107" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                   <span class="flex-grow flex flex-col pl-4">
-                    <span class="title-font font-medium text-gray-900">Alper Kamu</span>
-                    <span class="text-gray-500 text-sm">DESIGNER</span>
+                    <span class="title-font font-medium text-gray-900">Vedant Kumbhar</span>
+                    <span class="text-gray-500 text-sm">Random User</span>
                   </span>
                 </a>
               </div>
@@ -239,10 +238,10 @@
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
-            <span class="ml-3 text-xl">Tailblocks</span>
+            <span class="ml-3 text-xl">BookLife</span>
           </a>
-          <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2020 Tailblocks —
-            <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@knyttneve</a>
+          <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">© 2021 BookLife —
+            <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer" target="_blank">@ogamethorns</a>
           </p>
           <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
             <a class="text-gray-500">
