--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-            <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/720x600/?book">
           </div>
           <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Before Someone Tells the Suspense
               <br class="hidden lg:inline-block">BookLife Stories
             </h1>
-            <p class="mb-8 leading-relaxed">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium natus debitis reiciendis quae, atque modi, corrupti quisquam possimus totam rerum, dicta eius repudiandae odio accusamus ratione amet labore culpa suscipit?</p>
+            <p class="mb-8 leading-relaxed">Story books were one of the most important part of our childhood. Many Kids thought of writting their own stories. This website is made by a bunch of teenager, to show that there is no need to be an amazing writter or programmer to get started</p>
             <div class="flex justify-center">
               <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Get Reading</button>
             </div>
@@ -73,7 +73,7 @@
             </div>
           </div>
           <div class="lg:w-1/2 sm:w-1/3 w-full rounded-lg overflow-hidden mt-6 sm:mt-0">
-            <img class="object-cover object-center w-full h-full" src="https://dummyimage.com/600x300" alt="stats">
+            <img class="object-cover object-center w-full h-full" src="https://source.unsplash.com/600x300/?books" alt="stats">
           </div>
         </div>
       </section>
@@ -86,7 +86,7 @@
           <div class="flex flex-wrap -m-4">
             <div class="p-4 lg:w-1/4 md:w-1/2">
               <div class="h-full flex flex-col items-center text-center">
-                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://dummyimage.com/200x200">
+                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://source.unsplash.com/200x200/?book">
                 <div class="w-full">
                   <h2 class="title-font font-medium text-lg text-gray-900">Ishan Mali</h2>
                   <h3 class="text-gray-500 mb-3">Story&Poem Writter</h3>
@@ -113,7 +113,7 @@
             </div>
             <div class="p-4 lg:w-1/4 md:w-1/2">
               <div class="h-full flex flex-col items-center text-center">
-                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://dummyimage.com/201x201">
+                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://source.unsplash.com/201x201/?book">
                 <div class="w-full">
                   <h2 class="title-font font-medium text-lg text-gray-900">Omkar Kumbhar</h2>
                   <h3 class="text-gray-500 mb-3">Web Developer</h3>
@@ -140,7 +140,7 @@
             </div>
             <div class="p-4 lg:w-1/4 md:w-1/2">
               <div class="h-full flex flex-col items-center text-center">
-                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://dummyimage.com/202x202">
+                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://source.unsplash.com/202x202/?book">
                 <div class="w-full">
                   <h2 class="title-font font-medium text-lg text-gray-900">Ananya</h2>
                   <h3 class="text-gray-500 mb-3">Character Developer</h3>
@@ -167,7 +167,7 @@
             </div>
             <div class="p-4 lg:w-1/4 md:w-1/2">
               <div class="h-full flex flex-col items-center text-center">
-                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://dummyimage.com/203x203">
+                <img alt="team" class="flex-shrink-0 rounded-lg w-full h-56 object-cover object-center mb-4" src="https://source.unsplash.com/203x203/?book">
                 <div class="w-full">
                   <h2 class="title-font font-medium text-lg text-gray-900">????? ?????</h2>
                   <h3 class="text-gray-500 mb-3">???????</h3>
@@ -204,9 +204,9 @@
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4" viewBox="0 0 975.036 975.036">
                   <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
                 </svg>
-                <p class="leading-relaxed mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero nihil enim autem incidunt dolore numquam quasi maxime quos praesentium temporibus deleniti ratione libero in ex, perspiciatis illum, nam sunt sint!.</p>
+                <p class="leading-relaxed mb-6">Amazing Books written by these kids. Wish to teach my kids to code and write stories once they are grown enough. A true inspiration for me and my kids. Love to know more about them. Your work is amazing Keep it UP!!!</p>
                 <a class="inline-flex items-center">
-                  <img alt="testimonial" src="https://dummyimage.com/106x106" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                  <img alt="testimonial" src="https://source.unsplash.com/106x106/?icon,app" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                   <span class="flex-grow flex flex-col pl-4">
                     <span class="title-font font-medium text-gray-900">Vidhya Kumbhar</span>
                     <span class="text-gray-500 text-sm">Random User</span>
@@ -219,9 +219,9 @@
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4" viewBox="0 0 975.036 975.036">
                   <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
                 </svg>
-                <p class="leading-relaxed mb-6">Synth chartreuse iPhone lomo cray raw denim brunch everyday carry neutra before they sold out fixie 90's microdosing. Tacos pinterest fanny pack venmo, post-ironic heirloom try-hard pabst authentic iceland.</p>
+                <p class="leading-relaxed mb-6">Very nice Stories. You all remind me of myself when i was a kid. As a professional writter i have been blow away by your work from the stories to the website. Hope you around for a long time. Have donated you on Pateon to you. You Rock!!!</p>
                 <a class="inline-flex items-center">
-                  <img alt="testimonial" src="https://dummyimage.com/107x107" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                  <img alt="testimonial" src="https://source.unsplash.com/107x107/?icon,app" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                   <span class="flex-grow flex flex-col pl-4">
                     <span class="title-font font-medium text-gray-900">Vedant Kumbhar</span>
                     <span class="text-gray-500 text-sm">Random User</span>
