--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <span class="ml-3 text-xl">BookLife</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-gray-900">Home</a>
+            <a class="mr-5 hover:text-gray-900" href="index.html">Home</a>
             <a class="mr-5 hover:text-gray-900">About</a>
             <a class="mr-5 hover:text-gray-900">Book</a>
-            <a class="mr-5 hover:text-gray-900">Feedback</a>
+            <a class="mr-5 hover:text-gray-900" href="feedback.html">Feedback</a>
           </nav>
           <button class="inline-flex items-center bg-gray-100 border-1 py-3 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">GetStarted
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
