--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="mr-5 hover:text-gray-900" href="book.html">Book</a>
             <a class="mr-5 hover:text-gray-900" href="feedback.html">Feedback</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-100 border-1 py-3 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">GetStarted
+          <button class="inline-flex items-center bg-gray-100 border-1 py-3 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0" id="getStarted1">GetStarted
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -40,7 +40,7 @@
             </h1>
             <p class="mb-8 leading-relaxed">Story books were one of the most important part of our childhood. Many Kids thought of writting their own stories. This website is made by a bunch of teenager, to show that there is no need to be an amazing writter or programmer to get started</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Get Reading</button>
+              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" id="getStarted2">Get Reading</button>
             </div>
           </div>
         </div>
@@ -269,5 +269,6 @@
           </span>
         </div>
       </footer>
+      <script src="start.js"></script>
 </body>
 </html>
