--- a/feedback.html
+++ b/feedback.html
@@ -23,7 +23,7 @@
             <a class="mr-5 hover:text-gray-900" href="book.html">Book</a>
             <a class="mr-5 hover:text-gray-900" href="feedback.html">Feedback</a>
           </nav>
-          <button class="inline-flex items-center bg-gray-100 border-1 py-3 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">GetStarted
+          <button class="inline-flex items-center bg-gray-100 border-1 py-3 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0" id="getStarted1">GetStarted
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
               <path d="M5 12h14M12 5l7 7-7 7"></path>
             </svg>
@@ -130,5 +130,6 @@
         </div>
       </footer>
       <script type="text/javascript" src="controller.js"></script>
+      <script src="start.js"></script>
 </body>
 </html>
