--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-col text-center w-full mb-20">
             <h1 class="text-2xl font-medium title-font mb-4 text-gray-900">OUR TEAM</h1><hr>
-            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">This is all possible because of our ammazing team.It really makes me feel proud to work with them</p>
+            <p class="lg:w-2/3 mx-auto leading-relaxed text-base">This is all possible because of our amazing team.It really makes me feel proud to work with them</p>
           </div>
           <div class="flex flex-wrap -m-4">
             <div class="p-4 lg:w-1/4 md:w-1/2">
