--- a/about.html
+++ b/about.html
@@ -32,15 +32,15 @@
       <section class="text-gray-600 body-font">
         <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-            <img class="object-cover object-center rounded" alt="hero" src="omkarpic.jpg">
+            <img class="object-cover object-center rounded" alt="hero" src="OmkarInfo.jpeg">
           </div>
           <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Omkar Suhas Kumbhar
               <br class="hidden lg:inline-block">Web Developer
             </h1>
             <p class="mb-8 leading-relaxed">
-                Omkar Suhas Kumbhar, son of Suhas Kumbhar and Vidhya Kumbhar
-                Also known as ogamethorns, Has been learning to develope websites since a very long time. He makes all Kinds of Websites Dynamic or Static.
+                Omkar Suhas Kumbhar, son of Dr. Suhas G. Kumbhar and Vidhya S. Kumbhar
+                Also known as ogamethorns, Has been learning to develope websites since a very long time. He makes all Kinds of Websites Dynamic or Static. He is Born in Sangli, Maharashtra, India and is studing in podar International School 7th Grade
             </p>
             <div class="flex justify-center">
               <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" id="knowOmkar">Know more</button>
@@ -57,7 +57,7 @@
             <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Ishan Sanjay Mali
               <br class="hidden lg:inline-block">Writter and Poet
             </h1>
-            <p class="mb-8 leading-relaxed">Ishan S. Mali Son of Sanjay Mali, who writes all kind of books. He is Born in Sangli, Maharashtra, India and is studing in podar International School</p>
+            <p class="mb-8 leading-relaxed">Ishan S. Mali Son of Sanjay Mali, who writes all kind of books. He is Born in Sangli, Maharashtra, India and is studing in podar International School 7th Grade</p>
             <div class="flex justify-center">
               <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" id="knowIshan">Know more</button>
             </div>
