--- a/about.html
+++ b/about.html
@@ -63,6 +63,25 @@
             </div>
           </div>
         </div>
+      </section><hr>
+      <section class="text-gray-600 body-font">
+        <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+          <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+            <img class="object-cover object-center rounded" alt="hero" src="anayaprofile.jpeg" width="600">
+          </div>
+          <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Ananya Sourabh Patwardhan
+              <br class="hidden lg:inline-block">Character Designer
+            </h1>
+            <p class="mb-8 leading-relaxed">Ananya Patwardhan 
+              7th Grade 
+              Podar International School Sangli 
+              Hobbies : Drawing, Painting, Cooking , Travelling etc.</p>
+            <div class="flex justify-center">
+              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Know more</button>
+            </div>
+          </div>
+        </div>
       </section>
       <footer class="text-gray-600 body-font">
         <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
