--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
               Podar International School Sangli 
               Hobbies : Drawing, Painting, Cooking , Travelling etc.</p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Know more</button>
+              <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg" id="knowAnanya">Know more</button>
             </div>
           </div>
         </div>
