--- a/book.html
+++ b/book.html
@@ -52,7 +52,7 @@
                 </span>
               </div>
               <a class="inline-flex items-center">
-                <img alt="blog" src="https://source.unsplash.com/150x150/?icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                <img alt="blog" src="https://source.unsplash.com/150x150/?app,icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                 <span class="flex-grow flex flex-col pl-4">
                   <span class="title-font font-medium text-gray-900">Ishan Mali</span>
                   <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
@@ -78,7 +78,7 @@
                 </span>
               </div>
               <a class="inline-flex items-center">
-                <img alt="blog" src="https://source.unsplash.com/130x130/?icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+                <img alt="blog" src="https://source.unsplash.com/130x130/?app,icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                 <span class="flex-grow flex flex-col pl-4">
                   <span class="title-font font-medium text-gray-900">Ishan Mali</span>
                   <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
@@ -106,7 +106,7 @@
             </span>
           </div>
           <a class="inline-flex items-center">
-            <img alt="blog" src="https://source.unsplash.com/130x130/?icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
+            <img alt="blog" src="https://source.unsplash.com/130x130/?app,icon" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
             <span class="flex-grow flex flex-col pl-4">
               <span class="title-font font-medium text-gray-900">Ishan Mali</span>
               <span class="text-gray-400 text-xs tracking-widest mt-0.5">Writter and Poet</span>
