--- a/book.html
+++ b/book.html
@@ -38,7 +38,7 @@
               <h2 class="sm:text-3xl text-2xl title-font font-medium text-gray-900 mt-4 mb-4">911 Crime Stories Chapter 1</h2>
               <p class="leading-relaxed mb-8">911 is a crime based story where a superintendent is trying to solve cases . he also has a team with high intelligence. The twist in the story bring out the suspense. The story is fully suspense based. Just becalm have a nice seat and read all the chapters as there is no end for this series.Chapter one is based on a gang which is unknown. The pieces of the story complete the puzzle and finally comes to a end. Read it to known how the end goes</p>
               <div class="flex items-center flex-wrap pb-4 mb-4 border-b-2 border-gray-100 mt-auto w-full">
-                <a class="text-indigo-500 inline-flex items-center" href="911(part 1) (1).pdf" target="_blank">Read Now
+                <a class="text-indigo-500 inline-flex items-center" href="911(part 1) (1).pdf" target="_blank" id="link1">Read Now
                   <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M5 12h14"></path>
                     <path d="M12 5l7 7-7 7"></path>
@@ -48,7 +48,7 @@
                   <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                     <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                     <circle cx="12" cy="12" r="3"></circle>
-                  </svg>0.6k
+                  </svg><p id="like1">0</p>
                 </span>
               </div>
               <a class="inline-flex items-center">
@@ -74,7 +74,7 @@
                   <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                     <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                     <circle cx="12" cy="12" r="3"></circle>
-                  </svg>0.3k
+                  </svg><p id="like2">0</p>
                 </span>
               </div>
               <a class="inline-flex items-center">
@@ -102,7 +102,7 @@
               <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                 <circle cx="12" cy="12" r="3"></circle>
-              </svg>0.5k
+              </svg><p id="like3">0</p>
             </span>
           </div>
           <a class="inline-flex items-center">
