--- a/book.html
+++ b/book.html
@@ -48,7 +48,7 @@
                   <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                     <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                     <circle cx="12" cy="12" r="3"></circle>
-                  </svg><p id="like1">0</p>
+                  </svg><p id="like1">96k</p>
                 </span>
               </div>
               <a class="inline-flex items-center">
@@ -74,7 +74,7 @@
                   <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                     <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                     <circle cx="12" cy="12" r="3"></circle>
-                  </svg><p id="like2">0</p>
+                  </svg><p id="like2">98k</p>
                 </span>
               </div>
               <a class="inline-flex items-center">
@@ -105,7 +105,7 @@
                     <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                       <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                       <circle cx="12" cy="12" r="3"></circle>
-                    </svg>1.2K
+                    </svg>60k
                   </span>
                 </div>
                 <a class="inline-flex items-center">
@@ -131,7 +131,7 @@
                     <svg class="w-4 h-4 mr-1" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
                       <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
                       <circle cx="12" cy="12" r="3"></circle>
-                    </svg>1.5K
+                    </svg>78k
                   </span>
                 </div>
                 <a class="inline-flex items-center">
